Added link to EMCC

--- a/_includes/nav-mobile.html
+++ b/_includes/nav-mobile.html
@@ -6,10 +6,11 @@
         <li><a href="{{ ed.url }}">{{ ed.colocated_short }}</a></li>
     {% endfor %}
 
+    <li><a href="https://emc2challenge.com/" target="_blank">EMCC</a></li>
     <li><a href="/submission">Submission</a></li>
-    <li><a href="/feedback">Feedback</a></li>
     <li><a href="/program-committee">Committies</a></li>
     <li><a href="/previous-editions">Previous Editions</a></li>
     <li><a href="https://ieeexplore.ieee.org/xpl/conhome/1826546/all-proceedings">IEEE Proceedings</li>
+    <li><a href="/feedback">Feedback</a></li>
 </ul>
 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
