--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,7 @@
   <li><a href="/program-committee">Committies</a></li>
   <li><a href="/previous-editions">Previous Editions</a></li>
   <li><a href="https://ieeexplore.ieee.org/xpl/conhome/1826546/all-proceedings">IEEE Proceedings</li>
+  <li><a href="/feedback">Feedback</a></li>
 </ul>
 
 <ul class="right hide-on-med-and-down">
@@ -14,6 +15,6 @@
     {% endfor %}
 
     <li><a href="/submission">Submission</a></li>
-    <li><a href="/feedback">Feedback</a></li>
+    <li><a href="https://emc2challenge.com/" target="_blank">EMCC</a></li>
     <li><a class="dropdown-trigger" href="#!" data-target="about-nav-dropdown">About<i class="material-icons right">arrow_drop_down</i></a></li>
 </ul>
