Refactored emcc annoucement into its own page.

--- a/_includes/nav-mobile.html
+++ b/_includes/nav-mobile.html
@@ -6,7 +6,7 @@
         <li><a href="{{ ed.url }}">{{ ed.colocated_short }}</a></li>
     {% endfor %}
 
-    <li><a href="https://emc2challenge.com/" target="_blank">EMCC</a></li>
+    <li><a href="/emcc">EMCC</a></li>
     <li><a href="/submission">Submission</a></li>
     <li><a href="/program-committee">Committies</a></li>
     <li><a href="/previous-editions">Previous Editions</a></li>
