--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,7 @@
         <li><a href="{{ ed.url }}">{{ ed.colocated_short }}</a></li>
     {% endfor %}
 
-    <li><a href="https://emc2challenge.com/" target="_blank">EMCC</a></li>
+    <li><a href="/emcc">EMCC</a></li>
     <li><a href="/submission">Submission</a></li>
     <li><a class="dropdown-trigger" href="#!" data-target="about-nav-dropdown">About<i class="material-icons right">arrow_drop_down</i></a></li>
 </ul>
