Adding registration links

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,7 @@
 
     <li><a href="/emcc">EMCC</a></li>
     <li><a href="/submission">Submission</a></li>
-    <li><a href="/registration">Registration</a></li>
+    <li><a href="/registration">Register</a></li>
     <li><a href="/sponsors">Sponsors</a></li>
     <li><a class="dropdown-trigger" href="#!" data-target="about-nav-dropdown">About<i class="material-icons right">arrow_drop_down</i></a></li>
 </ul>
