adding registration for mobile

--- a/_includes/nav-mobile.html
+++ b/_includes/nav-mobile.html
@@ -8,7 +8,7 @@
 
     <li><a href="/emcc">EMCC</a></li>
     <li><a href="/submission">Submission</a></li>
-    <li><a href="/submission">Register</a></li>
+    <li><a href="/registration">Register</a></li>
     <li><a href="/sponsors">Sponsors</a></li>
     <li><a href="/program-committee">Committies</a></li>
     <li><a href="/previous-editions">Previous Editions</a></li>
