--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -126,6 +126,10 @@
                 {% when 'poster_session' %}
                     {% assign poster_session_counter = poster_session_counter|plus:1 %}
                     {% assign talk_class_header = "Poster Session #"|append:poster_session_counter %}
+                {% when 'panel' %}
+                    {% assign talk_class_header = "Panel" %}
+                {% when 'announce' %}
+                    {% assign talk_class_header = "Announcements" %}
                 {% when 'welcome' %}
                     {% assign talk_class_header = "Welcome" %}
                 {% when 'close' %}
