--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -64,11 +64,11 @@
             {% endif %}
 
             {% if page.is_registering %}
-		<blockquote class="z-depth-1" style="text-align: left;">
+		<!--blockquote class="z-depth-1" style="text-align: left;">
 		    <p style="padding: 1rem;">
 		        <strong>Workshop Registration:</strong> Click <a href="/registration">here</a> to register.
 		    </p>
-		</blockquote>
+		</blockquote-->
 
             {% endif %}
 
