Fix syntax error.

--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -223,7 +223,7 @@
 
                 {% elsif p.type == "announce" %}
                     <h3 class="dark-primary">{{ p.title }}</h3>
-                {% elseif p.type == "welcome" or p.type == "close" %}
+                {% elsif p.type == "welcome" or p.type == "close" %}
                     <h3 class="dark-primary">{{ p.title }}</h3>
                     {% if p.speaker %}
                     <h4 class="light-primary">
