updating livestream banner

--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -69,9 +69,9 @@
 		        <strong>Workshop Registration:</strong> Click <a href="/registration">here</a> to register.
 		    </p-->
             <p style="padding: 1rem;">
-                <strong><a href="/virtual-20">How To Attend Virtual EMC<sup>2</sup> 2020</a>:</strong> All sessions
-                will be streamed live on <strong><a href="https://nam06.safelinks.protection.outlook.com/?url=https%3A%2F%2Fyoutu.be%2FGmxh9QgA9Hc&data=04%7C01%7Crapariha%40microsoft.com%7C5a3c1c0d749a459cf01608d896931124%7C72f988bf86f141af91ab2d7cd011db47%7C1%7C1%7C637424905673305801%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&sdata=Ez1FBoWWpkWjr6c7cF3k%2FGgcSaeHp7ZwutNRqV4mB88%3D&reserved=0">YouTube</a></strong>
-                and <strong><a href="https://nam06.safelinks.protection.outlook.com/?url=http%3A%2F%2Fbit.ly%2Femc2_6thEdition&data=04%7C01%7Crapariha%40microsoft.com%7Cb4a96bf9ff084a86285d08d898db787c%7C72f988bf86f141af91ab2d7cd011db47%7C1%7C0%7C637427417243962980%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&sdata=WGFQxDATJnFfpPqv4bYgMD7RNi%2FiRPRA37uA3BRxYb8%3D&reserved=0">MS Teams</a></strong>
+                <strong><a href="/virtual-21">How To Attend Virtual EMC<sup>2</sup> 2021</a>:</strong> All sessions
+                will be streamed live on <strong><a href="www.youtube.com">YouTube</a></strong>
+                and <strong><a href="https://www.microsoft.com/en-us/microsoft-teams/log-in">MS Teams</a></strong>
             </p>
 		</blockquote>
             {% endif %}
