--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -70,7 +70,7 @@
 		    </p-->
             <p style="padding: 1rem;">
                 <strong><a href="/virtual-21">How To Attend Virtual EMC<sup>2</sup> 2021</a>:</strong> All sessions
-                will be streamed live on <strong><a href="www.youtube.com">YouTube</a></strong>
+                will be streamed live on <strong><a href="https://www.youtube.com">YouTube</a></strong>
                 and <strong><a href="https://www.microsoft.com/en-us/microsoft-teams/log-in">MS Teams</a></strong>
             </p>
 		</blockquote>
