--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -72,6 +72,7 @@
                 <strong><a href="/virtual-21">How To Attend Virtual EMC<sup>2</sup> 2021</a>:</strong> All sessions
                 will be streamed live on <strong><a href="https://www.youtube.com">YouTube</a></strong>
                 and <strong><a href="https://www.emc2-ai.org/registration">MS Teams</a></strong><!--a href="https://www.microsoft.com/en-us/microsoft-teams/log-in">MS Teams</a></strong-->
+				. Register <strong><a href="https://www.emc2-ai.org/registration">here</a></strong>
             </p>
 		</blockquote>
             {% endif %}
