--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -70,9 +70,7 @@
 		    </p-->
             <p style="padding: 1rem;">
                 <strong><a href="/virtual-21">How To Attend Virtual EMC<sup>2</sup> 2021</a>:</strong> All sessions
-                will be streamed live on <strong><a href="https://www.youtube.com">YouTube</a></strong>
-                and <strong><a href="https://www.emc2-ai.org/registration">MS Teams</a></strong><!--a href="https://www.microsoft.com/en-us/microsoft-teams/log-in">MS Teams</a></strong-->
-				. Register <strong><a href="https://www.emc2-ai.org/registration">here</a></strong>
+                will be streamed live on <strong><a href="https://www.youtube.com">YouTube</a></strong>. Register <strong><a href="https://www.emc2-ai.org/registration">here</a></strong>
             </p>
 		</blockquote>
             {% endif %}
@@ -224,6 +222,9 @@
                     <p>
                         {% for panelist in p.panelists %}
                             <h4 class="dark-primary">{{ panelist.name }}, {{panelist.affiliation}}</h4>
+                            {% if p.bio %}
+                                {{ p.bio }}
+                            {% endif %}
                         {% endfor %}
                     </p>
 
