added proceedings links for previous editions; added youtube link for 6th edition; added 7th edition sponsors

--- a/_includes/previous-editions-table.html
+++ b/_includes/previous-editions-table.html
@@ -22,7 +22,13 @@
           <a href="{{ ed.colocated_url }}" target="_blank">{{ ed.colocated_short }}</a>
         {% endif %} in {{ ed.event_location }}
 		{% endif %}
-        <span style="float: right;">{{ ed.event_date|date: "%B %d, %Y"}}</span> 
+        {% if ed.has_proceedings %}
+          [Proceedings: <a href="{{ed.proceedings_url}}" target="_blank">{{ ed.proceedings_venue }}</a>]
+        {% endif %}
+          {% if ed.on_youtube %}
+          <a href="{{ ed.youtube_url }}" target="_blank">YouTube</a>
+          {% endif %}
+        <span style="float: right;">{{ ed.event_date|date: "%B %d, %Y"}}</span>
       </li>
     {% endfor %}
 </ul>
