--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -70,7 +70,7 @@
 		    </p-->
             <p style="padding: 1rem;">
                 <strong><a href="/virtual-21">How To Attend Virtual EMC<sup>2</sup> 2021</a>:</strong> All sessions
-                will be streamed live on <strong><a href="https://www.youtube.com">YouTube</a></strong>. Register <strong><a href="https://www.emc2-ai.org/registration">here</a></strong>
+                will be streamed live on <strong><a href="https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwww.youtube.com%2Fchannel%2FUCTwsyUtTOJg-vADmOmbczhw&data=04%7C01%7Ckdatta%40nvidia.com%7C735e3f66939e4c0b613e08d9697f50f9%7C43083d15727340c1b7db39efd9ccc17a%7C0%7C0%7C637656817848293984%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&sdata=aFTXxF7Bp5ZiI5zzYvvqJEaeyjlno6dA%2FN7xdmK076U%3D&reserved=0">YouTube</a></strong>. Register <strong><a href="https://www.emc2-ai.org/registration">here</a></strong>
             </p>
 		</blockquote>
             {% endif %}
