--- a/_includes/cfp.html
+++ b/_includes/cfp.html
@@ -2,16 +2,7 @@
   <div class="col s12">
       <h3 class="header"><i class="material-icons">description</i> Workshop Objective</h3>
       <p>
-        As artificial intelligence and other forms of cognitive computing continue to proliferate into new domains, many
-        forums for dialogue and knowledge sharing have emerged. In the proposed workshop, the primary focus is on the
-        exploration of energy efficient techniques and architectures for cognitive computing and machine learning, particularly
-        for applications and systems running at the edge. For such resource constrained environments, performance alone is never
-        sufficient, requiring system designers to carefully balance performance with power, energy, and area (overall PPA metric).
-      </p>
-      <p>The goal of this workshop is to provide a forum for researchers who are exploring novel ideas in the field of
-        energy efficient machine learning and artificial intelligence for a variety of applications. We also hope to provide a
-        solid platform for forging relationships and exchange of ideas between the industry and the academic world through
-        discussions and active collaborations.</p>
+        Transformers are the foundational principles of large deep learning language models. Recent successes of Transformer-based models in image classification and action prediction use cases indicate their wide applicability. In this workshop, we want to focus on the leading ideas using Transformer models such as PALM from Google. We will learn what have been their key observations on performance of the model, optimizations for inference and power consumption of both mixed-precision inference and training.</p>
   </div>
 </div>
 <div class="row">
@@ -22,39 +13,33 @@
   <div class="col {{ _col_size }}">
     <h3 class="header"><i class="material-icons">chat</i> Call for Papers</h3>
     <p>
-      A new wave of intelligent computing, driven by recent advances in machine learning and cognitive algorithms
-      coupled with process technology and new design methodologies, has the potential to usher unprecedented disruption
-      in the way conventional computing solutions are designed and deployed. These new and innovative approaches often
-      provide an attractive and efficient alternative not only in terms of performance but also power, energy, and area.
-      This disruption is easily visible across the whole spectrum of computing systems -- ranging from low end mobile
-      devices to large scale data centers and servers.</p>
-    <p>A key class of these intelligent solutions is providing real-time, on-device cognition at the edge to enable many
-      novel applications including vision and image processing, language translation, autonomous driving, malware
-      detection, and gesture recognition. Naturally, these applications have diverse requirements for
-      performance,energy, reliability, accuracy, and security that demand a holistic approach to designing the hardware,
-      software, and intelligence algorithms to achieve the best power, performance, and area (PPA).</p>
+    The goal of this Workshop is to provide a forum for researchers and industry experts who are exploring novel ideas, tools, and techniques to improve the energy efficiency of machine learning and deep learning as it is practiced today and would evolve in the next decade. We envision that only through close collaboration between industry and the academia we will be able to address the difficult challenges and opportunities of reducing the carbon footprint of AI and its uses. We have tailored our program to best serve the participants in a fully digital setting.  Our forum facilitates active exchange of ideas through: </p>
+
+    <ul class="browser-default list">
+
+	    <li>Keynotes, invited talks and discussion panels by leading researchers from industry and academia</li>
+	    <li>Peer-reviewed papers on latest solutions including works-in-progress to seek directed feedback from experts</li>
+	    <li>Independent publication of proceedings through IEEE CPS</li>
+
+    </ul>
+    <p>
+    We invite full-length papers describing original, cutting-edge, and even work-in-progress research projects about efficient machine learning. Suggested topics for papers include, but are not limited to the ones listed on this page. The proceedings from previous instances have been published through the prestigious IEEE Conference Publishing Services (CPS) and are available to the community via IEEE Xplore. In each instance, IEEE conducted independent assessment of the papers for quality.
+    </p>
+
   </div>
   {% endif %}
   <div class="col {{ _col_size }}">
     <h3 class="header"><i class="material-icons">format_list_bulleted</i> Topics for the Workshop</h3>
     <ul class="browser-default list">
-      <li>Architectures for the edge: IoT, automotive, and mobile</li>
-      <li>Approximation, quantization reduced precision computing</li>
-      <li>Hardware/software techniques for sparsity</li>
-      <li>Neural network architectures for resource constrained devices</li>
-      <li>Neural network pruning, tuning and and automatic architecture search</li>
-      <li>Novel memory architectures for machine learing</li>
-      <li>Communication/computation scheduling for better performance and energy</li>
-      <li>Load balancing and efficient task distribution techniques</li>
-      <li>Exploring the interplay between precision, performance, power and energy</li>
-      <li>Exploration of new and efficient applications for machine learning</li>
-      <li>Characterization of machine learning benchmarks and workloads</li>
-      <li>Performance profiling and synthesis of workloads</li>
-      <li>Simulation and emulation techniques, frameworks and platforms for machine learning</li>
-      <li>Power, performance and area (PPA) based comparison of neural networks</li>
-      <li>Verification, validation and determinism in neural networks</li>
-      <li>Efficient on-device learning techniques</li>
-      <li>Security, safety and privacy challenges and building secure AI systems</li>
+	    <li>Neural network architectures for resource constrained applications</li>
+	    <li>Efficient hardware designs to implement neural networks including sparsity, locality, and systolic designs</li>
+	    <li>Power and performance efficient memory architectures suited for neural networks</li>
+	    <li>Network reduction techniques – approximation, quantization, reduced precision, pruning, distillation, and reconfiguration</li>
+	    <li>Exploring interplay of precision, performance, power, and energy through benchmarks, workloads, and characterization</li>
+	    <li>Simulation and emulation techniques, frameworks, tools, and platforms for machine learning</li>
+	    <li>Optimizations to improve performance of training techniques including on-device and large-scale learning</li>
+	    <li>Load balancing and efficient task distribution, communication and computation overlapping for optimal performance</li>
+	    <li>Verification, validation, determinism, robustness, bias, safety, and privacy challenges in AI systems</li>
     </ul>
   </div>
 </div>
