remove emcc challenge links

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,7 @@
         <li><a href="{{ ed.url }}">{{ ed.colocated_short }}</a></li>
     {% endfor %}
 
-    <li><a href="/emcc">EMCC</a></li>
+    <!--<li><a href="/emcc">EMCC</a></li>-->
     <li><a href="/submission">Submission</a></li>
     {% if upcoming_editions.size > 0 %}
     {% assign next_upcoming_edition = upcoming_editions|first %}
