--- a/_includes/nav-mobile.html
+++ b/_includes/nav-mobile.html
@@ -6,7 +6,7 @@
         <li><a href="{{ ed.url }}">{{ ed.colocated_short }}</a></li>
     {% endfor %}
 
-    <li><a href="/emcc">EMCC</a></li>
+    <!--<li><a href="/emcc">EMCC</a></li>-->
     <li><a href="/submission">Submission</a></li>
     <li><a href="/registration">Register</a></li>
     <li><a href="/sponsors">Sponsors</a></li>
