--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -14,6 +14,7 @@
 {% assign program = site.programs|where: "edition",page.edition|group_by:"order"|sort:"name" %}
 {% assign program_size = program|size %}
 {% assign paper_session_counter = 0 %}
+{% assign lightning_session_counter = 0 %}
 {% assign talk_class_header = "" %}
 
 <main>
@@ -68,11 +69,14 @@
 		    <!--p style="padding: 1rem;">
 		        <strong>Workshop Registration:</strong> Click <a href="/registration">here</a> to register.
 		    </p-->
+    	<!--
+
             <p style="padding: 1rem;">
                 <strong><a href="/virtual-21">How To Attend Virtual EMC<sup>2</sup> 2021</a>:</strong> All sessions
                 will be streamed live on <strong><a href="https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwww.youtube.com%2Fchannel%2FUCTwsyUtTOJg-vADmOmbczhw&data=04%7C01%7Ckdatta%40nvidia.com%7C735e3f66939e4c0b613e08d9697f50f9%7C43083d15727340c1b7db39efd9ccc17a%7C0%7C0%7C637656817848293984%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&sdata=aFTXxF7Bp5ZiI5zzYvvqJEaeyjlno6dA%2FN7xdmK076U%3D&reserved=0">YouTube</a></strong>. Register <strong><a href="https://www.emc2-ai.org/registration">here</a></strong>,
                 and <strong><a href="https://bit.ly/emc2_7thEdition">MS Teams</a></strong>
             </p>
+	-->
 		</blockquote>
             {% endif %}
 
@@ -128,6 +132,9 @@
                 {% when 'paper_session' %}
                     {% assign paper_session_counter = paper_session_counter|plus:1 %}
                     {% assign talk_class_header = "Paper Session #"|append:paper_session_counter %}
+                {% when 'lightning_session' %}
+                    {% assign lightning_session_counter = lightning_session_counter|plus:1 %}
+                    {% assign talk_class_header = "Lightning Session #"|append:lightning_session_counter %}		    
                 {% when 'poster_session' %}
                     {% assign poster_session_counter = poster_session_counter|plus:1 %}
                     {% assign talk_class_header = "Poster Session #"|append:poster_session_counter %}
@@ -190,7 +197,7 @@
                         {% endif %}
                     </h4>
                     {{ p.content | markdownify }}
-                {% elsif p.type == "paper_session" or p.type == "poster_session" %}
+                {% elsif p.type == "paper_session" or p.type == "poster_session" or p.type == "lightning_session"%}
                     {% if p.papers.size == 0 %}
                         <p>Under review.</p>
                     {% endif %}
