--- a/_layouts/edition-page.html
+++ b/_layouts/edition-page.html
@@ -44,8 +44,8 @@
         </div>
         <div class="ed-grid-item-header-meta-right">
             <h5 class="dark-primary" style="margin: 0;">Room: {{ page.event_room }}</h5>
-	    <h5 class="dark-primary" style="margin: 0;">Click Here for: <a href="{{ page.online_link }}"
-		    target="_blank"><span style="white-space: nowrap;">Slides from the Workshop</span></a></h5>
+	    <!-- <h5 class="dark-primary" style="margin: 0;">Click Here for: <a href="{{ page.online_link }}"
+		    target="_blank"><span style="white-space: nowrap;">Slides from the Workshop</span></a></h5> -->
             <h5 class="primary-text" style="margin: 0;">{{ event_session_header }}</h5>
         </div>
         <div class="ed-grid-item-header-note">
