--- a/_includes/cfp.html
+++ b/_includes/cfp.html
@@ -4,7 +4,14 @@
   <div class="col s12">
       <h3 class="header"><i class="material-icons">description</i> Workshop Objective</h3>
       <p>
-        Transformers are the foundational principles of large deep learning language models. Recent successes of Transformer-based models in image classification and action prediction use cases indicate their wide applicability. In this workshop, we want to focus on the leading ideas using Transformer models such as PALM from Google. We will learn what have been their key observations on performance of the model, optimizations for inference and power consumption of both mixed-precision inference and training.</p>
+        Artificial intelligence (AI) continues to proliferate everyday life aided by the advances in automation, algorithms, and innovative hardware and
+software technologies. With the growing prominence of AI, Multimodal Large Language model (MLLM) has been rising as new foundational
+model architecture that uses powerful Large Language Model (LLM) with multimodal tasks efficiency. MLLM are able to achieve surprising
+capabilities based on text and images, suggesting path for Artificial General Intelligence (AGI). With the advent of new frontiers on execution
+of MLLM, we are facing new challenges on the ecosystem of software/hardware co-design. There is a realization about the energy cost of
+developing and deploying MLLM. Training and inferencing the most successful MLLM models has become exceedingly power-hungry often
+dwarfing the energy needs of entire households for years. At the edge, applications which use these LLMs models for inference are ubiquitous
+in cell phones, appliances, smart sensors, vehicles, and even wildlife monitors where efficiency is paramount for practical reasons.</p>
   </div>
 </div>
 <div class="row">
@@ -15,7 +22,12 @@
   <div class="col {{ _col_size }}">
     <h3 class="header"><i class="material-icons">chat</i> Call for Papers</h3>
     <p>
-    The goal of this Workshop is to provide a forum for researchers and industry experts who are exploring novel ideas, tools, and techniques to improve the energy efficiency of machine learning and deep learning as it is practiced today and would evolve in the next decade. We envision that only through close collaboration between industry and the academia we will be able to address the difficult challenges and opportunities of reducing the carbon footprint of AI and its uses. We have tailored our program to best serve the participants in a fully digital setting.  Our forum facilitates active exchange of ideas through: </p>
+    The goal of this Workshop is to provide a forum for researchers and industry experts who are exploring novel ideas, tools and techniques to
+improve the energy efficiency of MLLMs as it is practised today and would evolve in the next decade. We envision that only through close
+collaboration between industry and the academia we will be able to address the difficult challenges and opportunities of reducing the carbon
+footprint of AI and its uses. We have tailored our program to best serve the participants in a fully digital setting. Our forum facilitates active
+exchange of ideas through:
+</p>
 
     <ul class="browser-default list">
 
